--- a/style.css
+++ b/style.css
@@ -2,11 +2,12 @@ body {
 	text-align: center;
 	background-image: url(background.jpg);
 }
-span {
-	font-size: 12px;
-	color: red;
+.span {
+	box-shadow: 5px 5px 5px grey;
+	font-size: 20px;
 }
 canvas {
+	box-shadow: 1px 1px 38px grey;
 	background: pink;
 	border-radius: 20px;
 }
